[gd_scene load_steps=3 format=3 uid="uid://biu53qkyvstwk"]

[ext_resource type="Script" path="res://curves.gd" id="1_km4gg"]
[ext_resource type="PackedScene" uid="uid://doi2xqlcmvtff" path="res://curves_action.tscn" id="1_pyg1b"]

[node name="Curves" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 1142.0
offset_bottom = 648.0
script = ExtResource("1_km4gg")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 1132.0
offset_bottom = 31.0

[node name="ButtonAddAction" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_right = 815.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Add action"

[node name="ButtonClipboardLoad" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 819.0
offset_right = 984.0
offset_bottom = 31.0
text = "Load from clipboard"

[node name="ButtonClipboardCopy" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 988.0
offset_right = 1132.0
offset_bottom = 31.0
text = "Copy to clipboard"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 35.0
offset_right = 1132.0
offset_bottom = 39.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
offset_top = 43.0
offset_right = 1132.0
offset_bottom = 638.0
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ActionsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
offset_right = 1132.0
offset_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionContainer1" parent="VBoxContainer/ScrollContainer/ActionsContainer" instance=ExtResource("1_pyg1b")]
offset_right = 1132.0
offset_bottom = 227.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonAddAction" to="VBoxContainer" method="_on_button_add_action_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonClipboardLoad" to="VBoxContainer" method="_on_button_clipboard_load_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonClipboardCopy" to="VBoxContainer" method="_on_button_clipboard_copy_pressed"]
[connection signal="need_reload" from="VBoxContainer/ScrollContainer/ActionsContainer/ActionContainer1" to="VBoxContainer" method="_on_action_container_need_reload"]
